Fix overlap issue on large screens

--- a/styles/components/info-section.module.scss
+++ b/styles/components/info-section.module.scss
@@ -80,6 +80,7 @@
 
             .panningImage {
                 width: 100%;
+                max-width: 460px;
             }
 
             button {
